<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Note1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/NotePageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:background="@color/white"
                android:hint="@string/type_here"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="25sp" />
        </ScrollView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BackButton"
            android:onClick="back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_button"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ClearButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9B00EE"
            android:text="@string/clear"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SaveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>