<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".SignInPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/SignInEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_focuss_color"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/SignInPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_focuss_color"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="@android:color/white" />


        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginEnd="107dp"
            android:textColor="@android:color/holo_blue_light" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/buttons_color"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/signInProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>