<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".SignUpPage">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:background="@drawable/ic_focuss_color"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:background="@drawable/ic_focuss_color"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/repeat_password"
        android:background="@drawable/ic_focuss_color"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:background="@color/buttons_color"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:foregroundGravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>